my-react-app/src/pages/home/home.css
.no-category-container {
    background-color: var(--secondary-theme);
    max-width: 74vw;
    width: 100%;
    height: 100%;
    padding: 20px;
}

.home-intro {
    margin-bottom: 8px;
    min-height: 385px;
}

.region-map {
    width: 400px;
    height: auto;
    float: right;
    margin-left: 8px;
}

.weather {
    display: flex;
    justify-content: space-between;
}

.weather-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.weather-icon {
    margin-top: -20px;
}

.temperature {
    margin-top: -20px;
}

.flag-icon.weather {
    margin-right: 0;
    font-size: 3em;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

